--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,113 @@
   text-align: center;
 }
 
+body {
+  background-color: black;
+}
+
+li {
+  display: inline-block;
+  margin-left: 5px;
+  cursor: pointer;
+  background-color: whitesmoke;
+  border-radius: 4px;
+  box-shadow: -10px 10px 10px rgba(0,39,39,.7);
+  padding: 5px;
+  font-size: 1.05em;
+}
+
+ul {
+  margin-top: 25px;
+}
+
+li:hover {
+  font-style: italic;
+}
+
+Link.active {
+  background-color: blueviolet !important;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
+* {
+  margin: 0px;
+  padding: 0px;
+}
+.content {
+  height: 75%;
+  color: whitesmoke;
+  display: block;
+  margin-top: 50px;
+  text-align: center;
+}
+h2{
+    margin-top: 30px;
+    text-align: center;
+    color: whitesmoke;
+}
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+    from {background-position: 0;}
+    to {background-position:10000px 0;}
+}
+
+.stars, .twinkling{
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat bottom left;
+  z-index:0;
+}
+
+.twinkling{
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat bottom left;
+  z-index:1;
+
+  -moz-animation:move-twink-back 200s linear infinite;
+  -ms-animation:move-twink-back 200s linear infinite;
+  -o-animation:move-twink-back 200s linear infinite;
+  -webkit-animation:move-twink-back 200s linear infinite;
+  animation:move-twink-back 200s linear infinite;
 }
 
 .App-intro {
